2009-12-26  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-handle-insert-directory): Quote "'" in the
	switches.  Check also for //SUBDIRED// line.

2009-12-23  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* ps-print.el (ps-face-attributes): It was not returning the
	attribute face for faces specified as string.  Reported by harven
	<harven@free.fr>.
	(ps-print-version): New version 7.3.5.

2009-12-18  Ulf Jasper  <ulf.jasper@web.de>

	* calendar/icalendar.el (icalendar--convert-tz-offset): Fixed
	timezone names.
	(icalendar--convert-tz-offset): Fixed the "last-day-problem".
	(icalendar--add-diary-entry): Remove the trailing blank that
	diary-make-entry inserts.

2009-12-17  Michael Albinus  <michael.albinus@gmx.de>

	Make `file-expand-wildcards' work for remote files.

	* files.el (file-expand-wildcards): In case of remote files, check
	only local file name part for wildcards.  Provide feature 'files
	and subfeature 'remote-wildcards.  (Bug#5198)

	* net/tramp.el (tramp-handle-file-remote-p): Expand file name only
	if there is already an established connection.
	(tramp-advice-file-expand-wildcards): Remove it.

	* net/tramp-compat.el (top): Autoload `tramp-handle-file-remote-p'.
	(tramp-advice-file-expand-wildcards): Moved from tramp.el.
	Activate advice for older GNU Emacs versions.  (Bug#5237)

2009-12-17  Juanma Barranquero  <lekktu@gmail.com>

	Some doc fixes (more needed).

	* find-cmd.el (find-constituents): Reflow docstring.
	(find-cmd, find-prune, find-command): Fix typos in docstrings.
	(find-generic): Doc fix.

2009-12-17  Juri Linkov  <juri@jurta.org>

	Fix regression from 23.1 to allow multiple modes in Local Variables.

	* files.el (hack-local-variables-filter): While ignoring duplicates,
	don't take `mode' into account.
	(hack-local-variables-filter, hack-dir-local-variables): Don't
	remove duplicate `mode' from local-variables-alist (like `eval').

2009-12-17  Juri Linkov  <juri@jurta.org>
