@@ -1,3 +1,8 @@
+2009-12-26  Kevin Ryde  <user42@zip.com.au>
+
+	* info-look.el (sh-mode): Look for coreutils new "Concept Index"
+	node.  Keep previous "Index" name to work with past coreutils too.
+
 2009-12-26  Michael Albinus  <michael.albinus@gmx.de>
 
 	* net/tramp.el (tramp-handle-insert-directory): Quote "'" in the
